--- a/conf/locale/pl_PL/LC_MESSAGES/packetfence.po
+++ b/conf/locale/pl_PL/LC_MESSAGES/packetfence.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PacketFence\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2017-03-23 13:06+0000\n"
+"PO-Revision-Date: 2017-04-18 19:19+0000\n"
 "Last-Translator: inverse <info@inverse.ca>\n"
 "Language-Team: Polish (Poland) (http://www.transifex.com/inverse/packetfence/language/pl_PL/)\n"
 "MIME-Version: 1.0\n"
@@ -34,6 +34,11 @@ msgstr ""
 msgid "Access Authorized"
 msgstr ""
 
+# html/captive-
+# portal/lib/captiveportal/PacketFence/Controller/Activate/Email.pm
+msgid "Access granted"
+msgstr ""
+
 # html/captive-portal/templates/activation/sponsor_accepted.html
 msgid "Access to the guest network granted"
 msgstr "Dostęp do sieci gościnnej przyznany"
@@ -48,12 +53,25 @@ msgid ""
 "network."
 msgstr ""
 
+# html/captive-
+# portal/lib/captiveportal/PacketFence/DynamicRouting/Module/Root.pm
+msgid "Account created"
+msgstr ""
+
 # html/captive-portal/templates/emails/emails-guest_email_preregistration.html
 msgid "Activate your network access"
 msgstr ""
 
 # pf::person::FIELDS
 msgid "Address"
+msgstr ""
+
+# html/captive-portal/lib/captiveportal/PacketFence/Form/Authentication.pm
+msgid ""
+"After registering, you will be given temporary network "
+"access\".(defined($email_timeout) ? \" during $email_timeout\" : \"\").\". "
+"In order to complete your registration, you will need to click on the link "
+"emailed to you."
 msgstr ""
 
 # html/captive-portal/templates/provisioner/sepm.html
@@ -66,6 +84,12 @@ msgstr ""
 
 # html/captive-portal/templates/account.html
 msgid "An e-mail with the login informations will follow in the next minutes"
+msgstr ""
+
+# html/captive-portal/lib/captiveportal/PacketFence/Controller/Root.pm
+# html/captive-
+# portal/lib/captiveportal/PacketFence/DynamicRouting/Application.pm
+msgid "An error occured"
 msgstr ""
 
 # pf::person::FIELDS
@@ -101,6 +125,8 @@ msgstr ""
 msgid "Cell_phone"
 msgstr ""
 
+# html/captive-
+# portal/lib/captiveportal/PacketFence/DynamicRouting/Module/TLSEnrollment.pm
 # html/captive-portal/templates/pki_provider/packetfence_local.html
 # html/captive-portal/templates/pki_provider/packetfence_pki.html
 # html/captive-portal/templates/pki_provider/scep.html
@@ -113,6 +139,11 @@ msgstr ""
 
 # pf::person::FIELDS
 msgid "Company"
+msgstr ""
+
+# html/captive-
+# portal/lib/captiveportal/PacketFence/DynamicRouting/Module/Authentication/SMS.pm
+msgid "Confirm Mobile Phone Number"
 msgstr ""
 
 # html/captive-portal/templates/challenge.html
@@ -188,6 +219,11 @@ msgstr ""
 msgid "Device Type"
 msgstr ""
 
+# html/captive-
+# portal/lib/captiveportal/PacketFence/Controller/DeviceRegistration.pm
+msgid "Device registration landing"
+msgstr ""
+
 # html/captive-portal/templates/emails/emails-guest_sponsor_activation.html
 msgid "Do NOT authorize access if you were not expecting this guest."
 msgstr ""
@@ -209,11 +245,18 @@ msgstr ""
 msgid "E-mail"
 msgstr ""
 
+# html/captive-portal/lib/captiveportal/PacketFence/Form/Authentication.pm
 # html/captive-portal/templates/account.html
 # html/captive-portal/templates/emails/emails-guest_sponsor_activation.html
 # pf::person::FIELDS
 msgid "Email"
 msgstr "Mejl"
+
+# html/captive-
+# portal/lib/captiveportal/PacketFence/Controller/Activate/Email.pm
+msgid ""
+"Email activation code has been verified. Access granted until : $unregdate"
+msgstr ""
 
 # html/captive-portal/templates/violations/bandwidth_expiration.html
 msgid "Expiration"
@@ -246,6 +289,11 @@ msgstr ""
 # html/captive-portal/templates/pki_provider/packetfence_pki.html
 # html/captive-portal/templates/pki_provider/scep.html
 msgid "Generate certificate"
+msgstr ""
+
+# html/captive-
+# portal/lib/captiveportal/PacketFence/Controller/Activate/Email.pm
+msgid "Guest Sponsor Login"
 msgstr ""
 
 # html/captive-portal/templates/emails/emails-guest_email_activation.html
@@ -292,6 +340,7 @@ msgstr ""
 msgid "Hostname"
 msgstr ""
 
+# html/captive-portal/lib/captiveportal/PacketFence/Form/Widget/Field/AUP.pm
 # html/captive-portal/templates/device-registration/login.html
 # html/captive-portal/templates/status.html
 msgid "I accept the terms"
@@ -385,6 +434,8 @@ msgstr ""
 msgid "Lastname"
 msgstr "Nazwisko"
 
+# html/captive-
+# portal/lib/captiveportal/PacketFence/Controller/DeviceRegistration.pm
 # html/captive-portal/templates/activation/sponsor_login.html
 # html/captive-portal/templates/device-registration/login.html
 # html/captive-portal/templates/oauth2/landing.html
@@ -409,6 +460,10 @@ msgstr "MAC"
 # html/captive-portal/templates/status.html
 msgid "MAC Address"
 msgstr "Adres MAC"
+
+# html/captive-portal/lib/captiveportal/PacketFence/Form/Authentication.pm
+msgid "Mobile provider"
+msgstr ""
 
 # html/captive-portal/templates/emails/emails-guest_email_activation.html
 msgid "Network access activation"
@@ -490,6 +545,7 @@ msgstr "PIN"
 msgid "PacketFence Registration system"
 msgstr ""
 
+# html/captive-portal/lib/captiveportal/PacketFence/Form/Authentication.pm
 # html/captive-portal/templates/account.html
 # html/captive-portal/templates/activation/sponsor_login.html
 # html/captive-portal/templates/device-registration/login.html
@@ -506,6 +562,11 @@ msgstr ""
 # html/captive-portal/templates/status.html
 msgid "Password"
 msgstr "Hasło"
+
+# html/captive-
+# portal/lib/captiveportal/PacketFence/DynamicRouting/Module/Authentication/Billing.pm
+msgid "Pay for your access"
+msgstr ""
 
 # html/captive-portal/templates/emails/emails-guest_sponsor_activation.html
 msgid "Phone number"
@@ -546,6 +607,11 @@ msgstr ""
 msgid "Register another device"
 msgstr ""
 
+# html/captive-
+# portal/lib/captiveportal/PacketFence/Controller/DeviceRegistration.pm
+msgid "Registration"
+msgstr ""
+
 # html/captive-portal/templates/status.html
 msgid "Registration Date"
 msgstr ""
@@ -564,6 +630,11 @@ msgstr ""
 
 # pf::person::FIELDS
 msgid "Room_number"
+msgstr ""
+
+# html/captive-
+# portal/lib/captiveportal/PacketFence/DynamicRouting/Module/Authentication/SAML.pm
+msgid "SAML authentication"
 msgstr ""
 
 # html/captive-portal/templates/device-registration/registration.html
@@ -590,10 +661,24 @@ msgstr ""
 msgid "Sponsor"
 msgstr ""
 
+# html/captive-portal/lib/captiveportal/PacketFence/Form/Authentication.pm
+msgid "Sponsor Email"
+msgstr ""
+
+# html/captive-
+# portal/lib/captiveportal/PacketFence/Controller/Activate/Email.pm
+msgid "Sponsor request accepted"
+msgstr ""
+
+# html/captive-portal/lib/captiveportal/PacketFence/Controller/Status.pm
+msgid "State - Network Access"
+msgstr ""
+
 # html/captive-portal/templates/emails/emails-billing_confirmation.html
 msgid "Status"
 msgstr ""
 
+# html/captive-portal/lib/captiveportal/PacketFence/Form/Authentication.pm
 # pf::person::FIELDS
 msgid "Telephone"
 msgstr ""
@@ -640,6 +725,11 @@ msgstr ""
 
 # html/captive-portal/templates/billing/tier.html
 msgid "Tier"
+msgstr ""
+
+# html/captive-
+# portal/lib/captiveportal/PacketFence/DynamicRouting/Module/Authentication/Billing.pm
+msgid "Tier confirmation"
 msgstr ""
 
 # pf::person::FIELDS
@@ -728,6 +818,7 @@ msgstr ""
 msgid "User Account"
 msgstr ""
 
+# html/captive-portal/lib/captiveportal/PacketFence/Form/Authentication.pm
 # html/captive-portal/templates/account.html
 # html/captive-portal/templates/activation/sponsor_login.html
 # html/captive-portal/templates/device-registration/login.html
@@ -893,6 +984,15 @@ msgstr "Polski"
 msgid "pt_BR"
 msgstr "Português"
 
+# html/captive-
+# portal/lib/captiveportal/PacketFence/DynamicRouting/Module/Authentication/Blackhole.pm
+msgid "register: not allowed to register"
+msgstr ""
+
+# html/captive-portal/lib/captiveportal/PacketFence/DynamicRouting/Module.pm
+msgid "release: enabling network"
+msgstr ""
+
 # lib/pf/web/release.pm
 msgid "release: reopen browser"
 msgstr "Aby uzyskać dostęp do Internetu, może być niezbędne ponowne uruchomienie przeglądarki. Jeśli jesteś właczony do telefonu, będziesz musiał przeładować komputer, aby uzyskać dostęp do Internetu."
@@ -901,10 +1001,13 @@ msgstr "Aby uzyskać dostęp do Internetu, może być niezbędne ponowne uruchom
 msgid "requested guest access to your network."
 msgstr ""
 
+# html/captive-portal/lib/captiveportal/PacketFence/Controller/Remediation.pm
+# html/captive-portal/lib/captiveportal/PacketFence/Controller/Violation.pm
 # html/captive-portal/templates/scan-in-progress.html
 msgid "scan: scan in progress"
 msgstr "Twój system jest skanowany"
 
+# html/captive-portal/lib/captiveportal/PacketFence/Controller/Violation.pm
 # lib/pf/web.pm
 msgid "system scan in progress"
 msgstr "Twój system jest skanowany - ten proces zajmie około %s sekund."
