--- a/UPGRADE.asciidoc
+++ b/UPGRADE.asciidoc
@@ -239,6 +239,15 @@ New parameters have been introduced in `conf/pfdetect.conf`. Run the following s
 
   /usr/local/pf/addons/upgrade/to-7.0-pfdetect-conf.pl
 
+LinkedIn Source changes
+^^^^^^^^^^^^^^^^^^^^^^^
+
+If you are using the LinkedIn OAuth2 source, a change have been made on their API, thus you will need to do the following:
+
+  cd /usr/local/pf
+  sed -i "s/uas\/oauth2/oauth\/v2/g" conf/authentication.conf
+
+
 Logging service
 ^^^^^^^^^^^^^^^
 
